--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -1,26 +1,27 @@
 name: Github Action T-DEV-800
-on:
-  push:
-    branches:
-      - main
+on: [push]
 jobs:
   build_protobuf_dart:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sdk: [ dev, 2.17.0 ]
+        sdk: [ dev ]
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - uses: dart-lang/setup-dart@6a218f2413a3e78e9087f638a238f6b40893203d
         with:
           sdk: ${{ matrix.sdk }}
+      - name: Install protoc
+        run: sudo apt install -y protobuf-compiler
       - name: Report version
-        run: dart --version
-      - name: Install dependencies
-        run: dart pub get
+        run: dart --version && protoc --version
+      - name: Enable gRPC
+        run: dart pub global activate protoc_plugin
       - name: Check formatting (using dev dartfmt release)
         if: ${{ matrix.sdk == 'dev' }}
         run: dart format --output=none --set-exit-if-changed .
+      - name: Create folder for dart file
+        run: mkdir source
       - name: Build Dart gRPC
-        run: find protobuf/ -name '*.proto' | xargs -L1 protoc --proto_path=protobuf/ --dart_out=grpc:./source --plugin=protoc-gen-dart=$HOME/.pub-cache/bin/protoc-gen-dart -Iprotobuf/
+        run: find protobuf/ -name '*.proto' | xargs -L1 protoc --proto_path=protobuf/ --dart_out=grpc:./source --plugin=protoc-gen-dart=$HOME/.pub-cache/bin/protoc-gen-dart -Iprotobuf/ --experimental_allow_proto3_optional
         shell: bash
