--- a/picsmanager_application/pubspec.yaml
+++ b/picsmanager_application/pubspec.yaml
@@ -60,9 +60,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/paysage1.jpeg
+    - assets/images/paysage2.jpeg
+    - assets/images/paysage3.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
