--- a/picsmanager_application/pubspec.yaml
+++ b/picsmanager_application/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
+  protobuf: ^2.1.0
+  grpc: ^3.1.0
 
 dev_dependencies:
   flutter_test:
