--- a/picsmanager_application/ios/Runner/Info.plist
+++ b/picsmanager_application/ios/Runner/Info.plist
@@ -30,6 +30,10 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSCameraUsageDescription</key>
+	<string>NSMicrophoneUsageDescription</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiresFullScreen</key>
