--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -16,14 +16,15 @@ services:
 
     backend:
         build: .
-        ports:
-            - "8080:8080"
+        image: grpcconsul/server
         environment:
             DB_HOST: mongodb
             DB_PORT: 27017
             DB_USERNAME: root
             DB_PASSWORD: pass12345
         restart: "no"
+        ports:
+            - "50051:50051"
         depends_on:
             - mongodb
         links:
@@ -32,6 +33,6 @@ services:
             - mongonet
 
 networks:
-    mongonet: null
+    mongonet:
 volumes:
-    data: null
+    data:
