fix main docker compose to rflect backend one

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,15 @@ services:
 
     backend:
         build: .
-        ports:
-            - "8080:8080"
+        image: grpcconsul/server
         environment:
             DB_HOST: mongodb
             DB_PORT: 27017
             DB_USERNAME: root
             DB_PASSWORD: pass12345
         restart: "no"
+        ports:
+            - "50051:50051"
         depends_on:
             - mongodb
         links:
@@ -31,8 +32,7 @@ services:
         networks:
             - mongonet
 
-
 networks:
-    mongonet: null
+    mongonet:
 volumes:
-    data: null
+    data:
