--- a/picsmanager_application/pubspec.yaml
+++ b/picsmanager_application/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   animator: ^3.2.0
   flutter_svg: ^1.1.5
   image: ^4.0.15
+  flutter_image_compress: ^1.1.3
 
 dev_dependencies:
   flutter_test:
