--- a/picsmanager_application/pubspec.yaml
+++ b/picsmanager_application/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_svg: ^1.1.5
   image: ^4.0.15
   flutter_image_compress: ^1.1.3
+  tuple: ^2.0.1
 
 dev_dependencies:
   flutter_test:
