--- a/picsmanager_application/pubspec.yaml
+++ b/picsmanager_application/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image: ^4.0.15
   flutter_image_compress: ^1.1.3
   tuple: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
