--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,14 +2,11 @@ FROM golang:1.18
 
 WORKDIR /data
 
-COPY go.mod .
-COPY go.sum .
+COPY . .
 # RUN apk --no-cache add ca-certificates
 
 RUN go mod vendor
 
-COPY . .
-
-RUN go build  -o app ./init
+RUN go build --mod=vendor --trimpath -o app ./init
 
 CMD ["./app"]
